<resources>
    <string name="app_name">Chat App</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_underline"><u>Sign Up</u></string>
    <string name="login">Login</string>
    <string name="login_underline"><u>Login</u></string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="terms_agreement_text">By signing up, you agree to the Terms of Service and Privacy Policy, including CookieUse. Others will be able to find you by searching for your email address or phone number when provided.</string>
    <string name="value_is_incorrect">Value is incorrect</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="sample_name">Sample Name</string>
    <string name="stub">TODO</string>
    <string name="please_wait">Please wait</string>
    <string name="registering">Registering</string>
    <string name="signing_in">Logging In</string>
    <string name="send">send</string>
    <string name="start_new_msg">Start new message</string>
    <string name="logout">Log out</string>
</resources>