<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.fragment.SignInFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/top_label_text"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/top_borderline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cbd5dd" />

        <EditText
            android:id="@+id/email_field"
            style="@style/AppField"
            android:layout_width="match_parent"
            android:layout_marginTop="44dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/email_error_text"
            style="@style/AppTextError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/side_margin"
            android:text="@string/value_is_incorrect"
            android:textSize="20sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/password_field"
            style="@style/AppField"
            android:layout_width="match_parent"
            android:layout_marginTop="28dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/password_error_text"
            style="@style/AppTextError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/side_margin"
            android:text="@string/value_is_incorrect"
            android:textSize="20sp"
            android:visibility="gone" />

        <com.pparreno.ligchat.views.ArialButton
            android:id="@+id/login_btn"
            style="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/side_margin"
            android:background="@drawable/btn_primary_green_rounded"
            android:text="@string/login" />

        <TextView
            android:id="@+id/login_text"
            style="@style/AppText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/sign_up_underline"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/terms_agreement_text"
            style="@style/AppText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="@dimen/side_margin"
            android:gravity="center"
            android:text="@string/terms_agreement_text"
            android:textSize="16sp" />


    </LinearLayout>


</ScrollView>