<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.fragment.SignUpFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/top_label_text"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/top_borderline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cbd5dd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_label_text" />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="@dimen/side_margin"
            android:hint="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_borderline" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="@dimen/side_margin"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_field" />

        <com.pparreno.ligchat.views.ArialButton
            android:id="@+id/login_btn"
            style="@style/AppButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/side_margin"
            android:background="@drawable/btn_primary_green_rounded"
            android:text="@string/sign_up"
            app:layout_constraintTop_toBottomOf="@id/password_field" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="@string/login_underline"
            android:textColor="@color/text_gray"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_btn" />

        <TextView
            android:id="@+id/terms_agreement_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="@dimen/side_margin"
            android:layout_marginStart="@dimen/side_margin"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="@string/terms_agreement_text"
            android:textColor="@color/text_gray"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>