<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/chat_box_start_padding"
    android:paddingTop="@dimen/chat_box_top_padding"
    android:paddingEnd="@dimen/chat_box_end_padding">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="0dp" />

    <ImageView
        android:id="@+id/speech_bubble_stub"
        android:layout_width="7dp"
        android:layout_height="14dp"
        android:layout_marginBottom="@dimen/message_bubble_stub_margin_bottom"
        android:contentDescription="@string/stub"
        android:src="@drawable/left_stub_chat_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/chat_text_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@id/speech_bubble_stub"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/chat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_primary"
            android:letterSpacing="0.1"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="@dimen/chat_text_size" />

    </LinearLayout>

    <TextView
        android:id="@+id/owner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:letterSpacing="0.1"
        android:text="@string/sample_name"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/chat_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/chat_text_container"
        app:layout_constraintTop_toBottomOf="@id/chat_text_container" />

</androidx.constraintlayout.widget.ConstraintLayout>